--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script: "python manage.py test"
+after_success:
+  - git remote add deploy codeforeveryone@ssh.pythonanywhere.com:/home/codeforeveryone/bare-repos/site.git
+  - git push deploy
