--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script: "python manage.py test"
+addons:
+  ssh_known_hosts: ssh.pythonanywhere.com
 after_success:
   - git remote add deploy codeforeveryone@ssh.pythonanywhere.com:/home/codeforeveryone/bare-repos/site.git
-  - git push deploy
+  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && git push deploy
