--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: python
 python:
-  - "3.4"
-# command to install dependencies
-install: "pip install -r requirements.txt"
-# command to run tests
-script: "python manage.py test"
+- '3.4'
+install: pip install -r requirements.txt
+script: python manage.py test
 addons:
   ssh_known_hosts: ssh.pythonanywhere.com
 after_success:
-  - git remote add deploy codeforeveryone@ssh.pythonanywhere.com:/home/codeforeveryone/bare-repos/site.git
-  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && git push deploy && echo "deployed!"
+- chmod 600 deploy_key
+- ssh_add deploy_key
+- git remote add deploy codeforeveryone@ssh.pythonanywhere.com:/home/codeforeveryone/bare-repos/site.git
+- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && git push
+  deploy && echo "deployed!"
+before_install:
+- openssl aes-256-cbc -K $encrypted_0d858aabfd50_key -iv $encrypted_0d858aabfd50_iv
+  -in deploy_key.enc -out deploy_key -d
