jin is an idiot and underscores and dashes are not the same

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
 after_success:
 - chmod 600 deploy_key
 - eval "$(ssh-agent -s)"
-- ssh_add deploy_key
+- ssh-add deploy_key
 - git remote add deploy codeforeveryone@ssh.pythonanywhere.com:/home/codeforeveryone/bare-repos/site.git
 - git push deploy && echo "deployed!"
 before_install:
