--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ after_success:
 - ssh-add deploy_key
 - git config --global push.default simple
 - git remote add deploy codeforeveryone@ssh.pythonanywhere.com:/home/codeforeveryone/bare-repos/site.git
-- git push deploy HEAD:master && echo "deployed!"
+- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && git push deploy HEAD:master && echo "deployed!"
 before_install:
 - openssl aes-256-cbc -K $encrypted_0d858aabfd50_key -iv $encrypted_0d858aabfd50_iv
   -in deploy_key.enc -out deploy_key -d
