--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+beautifulsoup4==4.4.1
+bs4==0.0.1
 Django==1.8.3
-django-markdown==0.8.4
-Markdown==2.6.2
-#mysqlclient==1.3.6
-Pillow==2.9.0
 django-mailgun==0.8.0
+django-markdown==0.8.4
+freeze==1.0.9
+Markdown==2.6.2
+Pillow==2.9.0
+requests==2.9.1
+six==1.10.0
