add djangocms to site

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,29 @@
 beautifulsoup4==4.4.1
 bs4==0.0.1
+cmsplugin-filer==1.1.2
 Django==1.8.3
+django-appconf==1.0.2
+django-classy-tags==0.7.2
+django-cms==3.3.0
+django-filer==1.2.4
+django-formtools==1.0
 django-mailgun==0.8.0
 django-markdown==0.8.4
+django-mptt==0.8.4
+django-polymorphic==0.8.1
+django-reversion==2.0.5
+django-sekizai==0.9.0
+django-treebeard==4.0.1
+djangocms-admin-style==1.2.3
+djangocms-attributes-field==0.1.0
+djangocms-googlemap==0.5.1
+djangocms-inherit==0.2.1
+djangocms-snippet==1.8.1
+easy-thumbnails==2.3
 freeze==1.0.9
+html5lib==0.9999999
 Markdown==2.6.2
 Pillow==2.9.0
 requests==2.9.1
 six==1.10.0
+Unidecode==0.4.19
